add tests for RecipeController