@@ -1,6 +1,7 @@
 package guru.springframework.recipeproject.controllers;
 
 
+import com.sun.org.apache.xpath.internal.operations.Mod;
 import guru.springframework.recipeproject.commands.RecipeCommand;
 import guru.springframework.recipeproject.services.RecipeService;
 import org.springframework.stereotype.Controller;
@@ -20,8 +21,8 @@ public class RecipeController {
   }
 
   @RequestMapping("/recipe/{id}/show")
-  public String showById(@PathVariable Long id, Model model) {
-    model.addAttribute("recipe", recipeService.findById(new Long(id)));
+  public String showById(@PathVariable String id, Model model) {
+    model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
     return "recipe/show";
   }
 
@@ -31,14 +32,21 @@ public class RecipeController {
     return "recipe/recipeform";
   }
 
-  @PostMapping(path = "recipe")
+  @RequestMapping("/recipe/{id}/update")
+  public String updateRecipe(@PathVariable String id, Model model) {
+    RecipeCommand recipeCommand = recipeService.findCommandById(Long.valueOf(id));
+    model.addAttribute("recipe", recipeCommand);
+    return "recipe/recipeform";
+  }
+
+  @PostMapping(path = "/recipe")
   public String saveOrUpdate(@ModelAttribute RecipeCommand recipeCommand) {
     RecipeCommand savedCommand = recipeService.saveRecipeCommand(recipeCommand);
     return "redirect:/recipe/" + savedCommand.getId() + "/show";
   }
 
   @RequestMapping("/recipe/{id}/delete")
-  public String deleteRecipe(@PathVariable String id) {
+  public String deleteById(@PathVariable String id) {
     recipeService.deleteById(Long.valueOf(id));
     return "redirect:/";
   }
